Nowy obsługa działa
robi się 1 duży plik, dodano wytłuszczenie, zawijanie wierszy i kolory

--- a/filtracja8.vcxproj
+++ b/filtracja8.vcxproj
@@ -89,6 +89,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BasicExcel.cpp" />
+    <ClCompile Include="ExcelFormat.cpp" />
     <ClCompile Include="filtracja.cpp" />
     <ClCompile Include="filtracja8.cpp" />
     <ClCompile Include="piesi.cpp" />
@@ -101,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicExcel.hpp" />
+    <ClInclude Include="ExcelFormat.h" />
     <ClInclude Include="filtracja.h" />
     <ClInclude Include="piesi.h" />
     <ClInclude Include="pieszy.h" />
